--- a/3.html
+++ b/3.html
@@ -29,7 +29,10 @@
     },
   ];
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+      products.forEach(product => (product.price *= 0.85));
+console.log(products[0]);
+console.log(products[1]);
+console.log(products[2]);
 </script>
 </body>
 </html>
