--- a/5.html
+++ b/5.html
@@ -21,7 +21,9 @@ for(…){/* здесь пусто */}
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  for (let i = 0; i < 9; i++) 
+  console.log(i);
+  { }
 </script>
 </body>
 </html>
